--- a/css/styles.css
+++ b/css/styles.css
@@ -13,3 +13,176 @@
     width: 1050px;
   }
 }
+html {
+  box-sizing: border-box;
+}
+* {
+  box-sizing: inherit;
+}
+.main-nav {
+  width: 320px;
+  margin: 0 auto;
+  outline: red dashed 1px;
+  position: relative;
+  font-family: verdana, sans-serif;
+}
+@media (min-width: 768px) {
+  .main-nav {
+    width: 668px;
+  }
+}
+@media (min-width: 1150px) {
+  .main-nav {
+    width: 1050px;
+  }
+}
+.main-nav__visible {
+  position: relative;
+  display: flex;
+  align-items: center;
+  min-height: 80px;
+  padding: 0 30px;
+  border-top: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
+}
+.main-nav__visible picture {
+  margin: 0 auto;
+}
+.main-nav__logo:hover {
+  opacity: 0.6;
+}
+.main-nav__logo:active {
+  opacity: 0.3;
+}
+[class^="main-nav__list"] {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+.main-nav__item a {
+  position: relative;
+  display: block;
+  padding: 27px 0;
+  padding-left: 76px;
+  border-bottom: 1px solid #ececec;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #000000;
+}
+.main-nav__item a:hover {
+  background-color: #f1f1f1;
+}
+.main-nav__item a:active {
+  background-color: #d6d6d6;
+  color: rgba(0, 0, 0, 0.3);
+}
+.main-nav__item_search a::before,
+.main-nav__item_cart a::before {
+  content: "";
+  position: absolute;
+  left: 30px;
+  width: 22px;
+  height: 22px;
+  background: url("../img/search&cart-icon.png") no-repeat;
+}
+.main-nav__item_search a::before {
+  background-position: 2px 0px;
+}
+.main-nav__item_search a:hover::before {
+  background-position: 2px -63px;
+}
+.main-nav__item_search a:active::before {
+  background-position: 2px -130px;
+}
+.main-nav__item_cart a::before {
+  background-position: -49px 2px;
+}
+.main-nav__item_cart a:hover::before {
+  background-position: -49px -62px;
+}
+.main-nav__item_cart a:active::before {
+  background-position: -49px -128px;
+}
+@media (max-width: 768px) {
+  .main-nav__toggle {
+    position: absolute;
+    right: 30px;
+    width: 20px;
+    height: 20px;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+  }
+  .main-nav__toggle:focus {
+    outline: none;
+  }
+  .main-nav_opened .main-nav__toggle::before,
+  .main-nav_opened .main-nav__toggle::after {
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: -3px;
+    height: 4px;
+    width: 26px;
+    border-radius: 4px;
+    background-color: #000000;
+  }
+  .main-nav_opened .main-nav__toggle::before {
+    transform: rotate(45deg);
+  }
+  .main-nav_opened .main-nav__toggle::after {
+    transform: rotate(-45deg);
+  }
+  .main-nav_opened .main-nav__toggle:hover::before,
+  .main-nav_opened .main-nav__toggle:hover::after {
+    background-color: #666666;
+  }
+  .main-nav_opened .main-nav__toggle:active::before,
+  .main-nav_opened .main-nav__toggle:active::after {
+    background-color: #b2b2b2;
+  }
+  .main-nav_closed .main-nav__toggle::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 3px;
+    width: 20px;
+    height: 2px;
+    background-color: #000000;
+    box-shadow: 0 6px 0 0 #000000,
+                  0 12px 0 0 #000000;
+  }
+  .main-nav_closed .main-nav__toggle:hover::before {
+    background-color: #666666;
+    box-shadow: 0 6px 0 0 #666666,
+                  0 12px 0 0 #666666;
+  }
+  .main-nav_closed .main-nav__toggle:active::before {
+    background-color: #b2b2b2;
+    box-shadow: 0 6px 0 0 #b2b2b2,
+                  0 12px 0 0 #b2b2b2;
+  }
+  .mobile-nav-wrapper {
+    position: absolute;
+    width: 100%;
+  }
+  .main-nav_closed .mobile-nav-wrapper {
+    display: none;
+  }
+  .main-nav_nojs .main-nav__toggle {
+    display: none;
+  }
+  .main-nav_nojs .mobile-nav-wrapper {
+    position: static;
+    display: block;
+  }
+}
+.main-nav__search-icon,
+.main-nav__list3,
+.main-nav__delivery {
+  display: none;
+}
