--- a/less/styles.less
+++ b/less/styles.less
@@ -2,3 +2,5 @@
 @import "mixins.less";
 @import "scaffolding.less";
 @import "blocks/main-nav.less";
+@import "blocks/promo.less";
+@import "blocks/week-product.less";
