--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,7 @@
 @tablet-width: ~"(min-width: 768px)";
 @desktop-width: ~"(min-width: 1150px)";
 @mobile-width-only: ~"(max-width: 768px)";
+@tablet-width-only: ~"(min-width: 768px) and (max-width: 1150px)";
 
 
 @cerulean-color: #63d1bb;
