--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -353,10 +353,6 @@
     justify-content: space-between;
   }
 
-  .main-nav__visible {
-    margin-right: 65px;;
-  }
-
   .main-nav__list1 {
     position: static;
     order: -1;
@@ -380,6 +376,10 @@
   .main-nav__item_catalog a {
     padding-left: 0;
     border-right: 1px solid #ececec;
+  }
+
+  .main-nav__list2 {
+    padding-left: 68px;
   }
 
   .main-nav__list3 {
