--- a/less/blocks/week-product.less
+++ b/less/blocks/week-product.less
@@ -5,11 +5,11 @@
   &::after {
     content: "";
     position: absolute;
-    bottom: 0px;
+    bottom: -95px;
     left: 0;
     right: 0;
 
-    height: 12px;
+    height: 40px;
 
     background: url("../img/zigzag-grey.png") no-repeat;
     background-size: 100%;
@@ -22,7 +22,8 @@
 
   .container;
   padding: 0 30px;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
+  margin-bottom: 120px;
 
   display: flex;
   flex-direction: column;
