--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -15,6 +15,7 @@ html {
   font-family: "open sans", sans-serif;
   font-size: 16px;
   line-height: 16px;
+  font-weight: bold;
   color: #444444;
   text-align: center;
   text-transform: uppercase;
@@ -30,5 +31,30 @@ html {
 
   &:focus {
     outline: none;
+  }
+}
+
+.common-link {
+  position: relative;
+  color: #444444;
+  text-decoration: none;
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -1px;
+
+    height: 1px;
+    background-color: #62d1ba;
+  }
+
+  &:hover {
+    color: #62d1ba;
+  }
+
+  &:active {
+    opacity: 0.3;
   }
 }
