--- a/less/styles.less
+++ b/less/styles.less
@@ -4,3 +4,7 @@
 @import "blocks/main-nav.less";
 @import "blocks/promo.less";
 @import "blocks/week-product.less";
+@import "blocks/about-us.less";
+@import "blocks/responses.less";
+@import "blocks/contacts.less";
+@import "blocks/page-footer.less";
